[package]
name = "std140-macros"
version = "0.1.1"
description = "Procedural macros for the std140 crate."
authors = ["Roland Schermer <roland0507@gmail.com>"]
edition = "2018"
homepage = "https://github.com/RSSchermer/std140.rs"
repository = "https://github.com/RSSchermer/std140.rs"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.5"
quote = "1.0.2"

[dependencies.syn]
version = "1.0.5"
features = [
    "full"
]
